testament/tests/shouldfail/tmaxcodesize.nim
discard """
  targets: "c"
  maxcodesize: 1
"""

echo "Hello World"
